--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="map"></div>
+    
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
